Update project overview
Update: Also works with sperate backlog project set as subtask project (new work process Open2Bizz)

--- a/project_report_o2b/views/project_overview.xml
+++ b/project_report_o2b/views/project_overview.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
   <template id="project_overview">
+    <?xml version="1.0"?>
 <t t-name="project_report_o2b.project_overview">
   <t t-call="web.html_container">
     <t t-foreach="docs" t-as="o">
@@ -63,13 +64,13 @@
                 <strong>Date</strong>
               </td>
               <td style="width:30%;">
-                <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%d-%m-%Y %H:%M')" />
+                <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%d-%m-%Y %H:%M')"/>
               </td>
               <td style="width:20%;">
                 <strong>Customer</strong>
               </td>
               <td style="width:30%;">
-                <span t-field="o.partner_id" />
+                <span t-field="o.partner_id"/>
               </td>
             </tr>
             <tr>
@@ -77,13 +78,13 @@
                 <strong>Project</strong>
               </td>
               <td style="width:30%;">
-                <span t-field="o.name" />
+                <span t-field="o.name"/>
               </td>
               <td style="width:20%;">
                 <strong>Project Manager</strong>
               </td>
               <td style="width:30%;">
-                <span t-field="o.user_id" />
+                <span t-field="o.user_id"/>
               </td>
             </tr>
           </table>
@@ -93,7 +94,7 @@
               A task is a single unit of work – an action to accomplish in a project, a single step in a multi-step project. A task is accomplished by a set deadline, and must contribute toward work-related objectives.
             </p>
           </div>
-          <br />
+          <br/>
           <table class="open_tasks">
             <tr>
               <th class="bold">ID</th>
@@ -104,49 +105,48 @@
               <th class="bold">KB State</th>
               <th class="bold">Assigned to</th>
             </tr>
-            <t t-set="sum_plan_hours" t-value="0.0" />
-            <t t-set="sum_eff_hours" t-value="0.0" />
+            <t t-set="sum_plan_hours" t-value="0.0"/>
+            <t t-set="sum_eff_hours" t-value="0.0"/>
             <tr t-foreach="o.task_ids.sorted(key=lambda r: r.stage_id.sequence)" t-as="task" t-if="task.stage_id.fold == False and task.stage_id.backlog_stage == False">
               <td>
-                <t t-esc="task.id" />
+                <t t-esc="task.id"/>
               </td>
               <td>
-                <t t-esc="task.name" />
+                <t t-esc="task.name"/>
               </td>
               <td align="right">
-                <t t-esc="'%02d:%02d' % (int(float(task.planned_hours)),(float(task.planned_hours)+.01-int(float(task.planned_hours)))*60)" />
+                <t t-esc="'%02d:%02d' % (int(float(task.planned_hours)),(float(task.planned_hours)+.01-int(float(task.planned_hours)))*60)"/>
               </td>
               <td align="right">
-                <t t-esc="'%02d:%02d' % (int(float(task.effective_hours)),(float(task.effective_hours)+.01-int(float(task.effective_hours)))*60)" />
+                <t t-esc="'%02d:%02d' % (int(float(task.effective_hours)),(float(task.effective_hours)+.01-int(float(task.effective_hours)))*60)"/>
               </td>
               <td>
-                <t t-esc="task.stage_id.name" />
+                <t t-esc="task.stage_id.name"/>
               </td>
               <td>
-                <t t-if="task.kanban_state == 'done'" t-esc="task.legend_done" />
-                <t t-if="task.kanban_state == 'normal'" t-esc="task.legend_normal" />
-                <t t-if="task.kanban_state == 'blocked'" t-esc="task.legend_blocked" />
+                <t t-if="task.kanban_state == 'done'" t-esc="task.legend_done"/>
+                <t t-if="task.kanban_state == 'normal'" t-esc="task.legend_normal"/>
+                <t t-if="task.kanban_state == 'blocked'" t-esc="task.legend_blocked"/>
               </td>
               <td>
-                <t t-if="task.stage_id.responsiblity_of_partner != True" t-esc="task.user_id.name" />
-                <t t-if="task.stage_id.responsiblity_of_partner == True" t-esc="task.partner_id.name" />
+                <t t-if="task.stage_id.responsiblity_of_partner != True" t-esc="task.user_id.name"/>
+                <t t-if="task.stage_id.responsiblity_of_partner == True" t-esc="task.partner_id.name"/>
               </td>
-              <t t-set="sum_plan_hours" t-value="sum_plan_hours+task.planned_hours" />
-              <t t-set="sum_eff_hours" t-value="sum_eff_hours+task.effective_hours" />
+              <t t-set="sum_plan_hours" t-value="sum_plan_hours+task.planned_hours"/>
+              <t t-set="sum_eff_hours" t-value="sum_eff_hours+task.effective_hours"/>
             </tr>
             <tr>
               <td colspan="2" style="text-align: right;text-weight:bold;">Totalen</td>
               <td align="right">
-                <t t-esc="'%02d:%02d' % (int(float(sum_plan_hours)),(float(sum_plan_hours)+.01-int(float(sum_plan_hours)))*60)" />
+                <t t-esc="'%02d:%02d' % (int(float(sum_plan_hours)),(float(sum_plan_hours)+.01-int(float(sum_plan_hours)))*60)"/>
               </td>
               <td align="right">
-                <t t-esc="'%02d:%02d' % (int(float(sum_eff_hours)),(float(sum_eff_hours)+.01-int(float(sum_eff_hours)))*60)" />
+                <t t-esc="'%02d:%02d' % (int(float(sum_eff_hours)),(float(sum_eff_hours)+.01-int(float(sum_eff_hours)))*60)"/>
               </td>
-              <td />
-              <td />
+              <td colspan="3"/>
             </tr>
           </table>
-          <br />
+          <br/>
           <h2 class="pagebreak">2. Backlog</h2>
           <p>A product backlog is a list of the new features, changes to existing features, bug fixes, infrastructure changes or other activities that a team may deliver in order to achieve a specific outcome.</p>
           <table class="open_tasks">
@@ -160,54 +160,109 @@
               <th class="bold">Labels</th>
               <th class="bold">KB State</th>
             </tr>
-            <t t-set="sum_plan_hours" t-value="0.0" />
-            <t t-set="sum_eff_hours" t-value="0.0" />
+
+<t t-if="o.id == o.subtask_project_id.id">            
+
+            <t t-set="sum_plan_hours" t-value="0.0"/>
+            <t t-set="sum_eff_hours" t-value="0.0"/>
             <tr t-foreach="o.task_ids.sorted(key=lambda r: r.stage_id.sequence)" t-as="task" t-if="task.stage_id.backlog_stage == True">
               <td>
-                <t t-esc="task.id" />
+                <t t-esc="task.id"/>
               </td>
               <td>
-                <t t-esc="task.name" />
+                <t t-esc="task.name"/>
               </td>
               <td align="right">
-                <t t-esc="'%02d:%02d' % (int(float(task.planned_hours)),(float(task.planned_hours)+.01-int(float(task.planned_hours)))*60)" />
+                <t t-esc="'%02d:%02d' % (int(float(task.planned_hours)),(float(task.planned_hours)+.01-int(float(task.planned_hours)))*60)"/>
               </td>
               <td align="right">
-                <t t-esc="'%02d:%02d' % (int(float(task.effective_hours)),(float(task.effective_hours)+.01-int(float(task.effective_hours)))*60)" />
+                <t t-esc="'%02d:%02d' % (int(float(task.effective_hours)),(float(task.effective_hours)+.01-int(float(task.effective_hours)))*60)"/>
               </td>
               <td>
-                <t t-esc="task.stage_id.name" />
+                <t t-esc="task.stage_id.name"/>
               </td>
               <td>
-                <t t-if="task.stage_id.responsiblity_of_partner != True" t-esc="task.user_id.name" />
-                <t t-if="task.stage_id.responsiblity_of_partner == True" t-esc="task.partner_id.name" />
+                <t t-if="task.stage_id.responsiblity_of_partner != True" t-esc="task.user_id.name"/>
+                <t t-if="task.stage_id.responsiblity_of_partner == True" t-esc="task.partner_id.name"/>
               </td>
-              <t t-set="sum_plan_hours" t-value="sum_plan_hours+task.planned_hours" />
-              <t t-set="sum_eff_hours" t-value="sum_eff_hours+task.effective_hours" />
+              <t t-set="sum_plan_hours" t-value="sum_plan_hours+task.planned_hours"/>
+              <t t-set="sum_eff_hours" t-value="sum_eff_hours+task.effective_hours"/>
               <td>
                 <t t-foreach="task.tag_ids" t-as="tag">
-                  <t t-esc="tag.name" />
+                  <t t-esc="tag.name"/>
                 </t>
               </td>
               <td>
-                <t t-if="task.kanban_state == 'done'" t-esc="task.legend_done" />
-                <t t-if="task.kanban_state == 'normal'" t-esc="task.legend_normal" />
-                <t t-if="task.kanban_state == 'blocked'" t-esc="task.legend_blocked" />
+                <t t-if="task.kanban_state == 'done'" t-esc="task.legend_done"/>
+                <t t-if="task.kanban_state == 'normal'" t-esc="task.legend_normal"/>
+                <t t-if="task.kanban_state == 'blocked'" t-esc="task.legend_blocked"/>
               </td>
             </tr>
             <tr>
               <td colspan="2" style="text-align: right;text-weight:bold;">Totalen</td>
               <td align="right">
-                <t t-esc="'%02d:%02d' % (int(float(sum_plan_hours)),(float(sum_plan_hours)+.01-int(float(sum_plan_hours)))*60)" />
+                <t t-esc="'%02d:%02d' % (int(float(sum_plan_hours)),(float(sum_plan_hours)+.01-int(float(sum_plan_hours)))*60)"/>
               </td>
               <td align="right">
-                <t t-esc="'%02d:%02d' % (int(float(sum_eff_hours)),(float(sum_eff_hours)+.01-int(float(sum_eff_hours)))*60)" />
+                <t t-esc="'%02d:%02d' % (int(float(sum_eff_hours)),(float(sum_eff_hours)+.01-int(float(sum_eff_hours)))*60)"/>
               </td>
-              <td />
-              <td />
+              <td colspan="4"/>
             </tr>
-          </table>
-          <br />
+    
+
+</t>    
+
+              
+<t t-if="o.id != o.subtask_project_id.id or o.subtask_project_id == 0">
+          
+            <t t-set="sum_plan_hours" t-value="0.0"/>
+            <t t-set="sum_eff_hours" t-value="0.0"/>
+            <tr t-foreach="o.subtask_project_id.task_ids.sorted(key=lambda r: r.stage_id.sequence)" t-as="task" t-if="task.stage_id.backlog_stage == True">
+              <td>
+                <t t-esc="task.id"/>
+              </td>
+              <td>
+                <t t-esc="task.name"/>
+              </td>
+              <td align="right">
+                <t t-esc="'%02d:%02d' % (int(float(task.planned_hours)),(float(task.planned_hours)+.01-int(float(task.planned_hours)))*60)"/>
+              </td>
+              <td align="right">
+                <t t-esc="'%02d:%02d' % (int(float(task.effective_hours)),(float(task.effective_hours)+.01-int(float(task.effective_hours)))*60)"/>
+              </td>
+              <td>
+                <t t-esc="task.stage_id.name"/>
+              </td>
+              <td>
+                <t t-if="task.stage_id.responsiblity_of_partner != True" t-esc="task.user_id.name"/>
+                <t t-if="task.stage_id.responsiblity_of_partner == True" t-esc="task.partner_id.name"/>
+              </td>
+              <t t-set="sum_plan_hours" t-value="sum_plan_hours+task.planned_hours"/>
+              <t t-set="sum_eff_hours" t-value="sum_eff_hours+task.effective_hours"/>
+              <td>
+                <t t-foreach="task.tag_ids" t-as="tag">
+                  <t t-esc="tag.name"/>
+                </t>
+              </td>
+              <td>
+                <t t-if="task.kanban_state == 'done'" t-esc="task.legend_done"/>
+                <t t-if="task.kanban_state == 'normal'" t-esc="task.legend_normal"/>
+                <t t-if="task.kanban_state == 'blocked'" t-esc="task.legend_blocked"/>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2" style="text-align: right;text-weight:bold;">Totalen</td>
+              <td align="right">
+                <t t-esc="'%02d:%02d' % (int(float(sum_plan_hours)),(float(sum_plan_hours)+.01-int(float(sum_plan_hours)))*60)"/>
+              </td>
+              <td align="right">
+                <t t-esc="'%02d:%02d' % (int(float(sum_eff_hours)),(float(sum_eff_hours)+.01-int(float(sum_eff_hours)))*60)"/>
+              </td>
+              <td colspan="4"/>
+            </tr>
+</t>
+            </table>
+          <br/>
           <h2 class="pagebreak">3. Overview hour budget</h2>
           <h3>3.1 Project Orders</h3>
           <p>This table lists the sale orders for this project:</p>
@@ -221,16 +276,16 @@
             </tr>
             <tr t-foreach="o.sale_order_id" t-as="order">
               <td>
-                <span t-field="order.confirmation_date" t-options="{'widget': 'date'}" />
+                <span t-field="order.confirmation_date" t-options="{'widget': 'date'}"/>
               </td>
               <td>
-                <t t-esc="order.name" />
+                <t t-esc="order.name"/>
               </td>
               <td>
-                <t t-esc="order.user_id.name" />
+                <t t-esc="order.user_id.name"/>
               </td>
               <td align="right">
-                <t t-esc="'%02d:%02d' % (int(float(order.total_hours_on_order)),(float(order.total_hours_on_order)+.01-int(float(order.total_hours_on_order)))*60)" />
+                <t t-esc="'%02d:%02d' % (int(float(order.total_hours_on_order)),(float(order.total_hours_on_order)+.01-int(float(order.total_hours_on_order)))*60)"/>
               </td>
               <td>
                 <t t-if="order.state == 'sale'">Order</t>
@@ -238,26 +293,26 @@
               </td>
             </tr>
           </table>
-          <br />
+          <br/>
           <table class="project_totals">
             <tr class="project_totals">
               <td class="project_totals">Total hours budgeted:</td>
               <td class="project_totals" align="right">
-                <span t-esc="'%02d:%02d' % (int(float(o.total_hours_on_project)),(float(o.total_hours_on_project)+.01-int(float(o.total_hours_on_project)))*60)" />
+                <span t-esc="'%02d:%02d' % (int(float(o.total_hours_on_project)),(float(o.total_hours_on_project)+.01-int(float(o.total_hours_on_project)))*60)"/>
               </td>
             </tr>
             <tr class="project_totals">
               <td class="project_totals">Total hours spent:</td>
-              <t t-set="tot_eff_hours" t-value="sum(al.unit_amount for al in o.env['account.analytic.line'].search([('account_id', '=', o.analytic_account_id.id), ('is_timesheet','=', True)]))" />
+              <t t-set="tot_eff_hours" t-value="sum(al.unit_amount for al in o.env['account.analytic.line'].search([('account_id', '=', o.analytic_account_id.id), ('is_timesheet','=', True)]))"/>
               <td class="project_totals" align="right">
-                <span t-esc="'%02d:%02d' % (int(float(tot_eff_hours)),(float(tot_eff_hours)+.01-int(float(tot_eff_hours)))*60)" />
+                <span t-esc="'%02d:%02d' % (int(float(tot_eff_hours)),(float(tot_eff_hours)+.01-int(float(tot_eff_hours)))*60)"/>
               </td>
             </tr>
           </table>
-          <br />
-          <br />
+          <br/>
+          <br/>
           <h3>3.2 Timesheets</h3>
-          <br />
+          <br/>
           <table class="total_hours">
             <tr>
               <th class="bold" width="12%">Datum</th>
@@ -269,38 +324,38 @@
             </tr>
             <tr t-foreach="o.env['account.analytic.line'].search([('account_id', '=', o.analytic_account_id.id), ('is_timesheet','=', True)])" t-as="analytic_line">
               <td>
-                <span t-field="analytic_line.date" />
+                <span t-field="analytic_line.date"/>
               </td>
               <td>
-                <t t-esc="analytic_line.user_id.name" />
+                <t t-esc="analytic_line.user_id.name"/>
               </td>
               <td>
-                <t t-esc="analytic_line.name" />
+                <t t-esc="analytic_line.name"/>
               </td>
               <td>
-                <t t-esc="analytic_line.task_id.name" />
+                <t t-esc="analytic_line.task_id.name"/>
               </td>
               <td>
-                <t t-esc="'Task' if analytic_line.task_id else 'Ticket' if analytic_line.helpdesk_ticket_id else ''" />
+                <t t-esc="'Task' if analytic_line.task_id else 'Ticket' if analytic_line.helpdesk_ticket_id else ''"/>
               </td>
               <td align="right">
-                <t t-esc="'%02d:%02d' % (int(float(analytic_line.unit_amount)),(float(analytic_line.unit_amount)+.01-int(float(analytic_line.unit_amount)))*60)" />
+                <t t-esc="'%02d:%02d' % (int(float(analytic_line.unit_amount)),(float(analytic_line.unit_amount)+.01-int(float(analytic_line.unit_amount)))*60)"/>
               </td>
             </tr>
           </table>
-          <br />
+          <br/>
           <p style="page-break-before: always;">
             <h2>Legend</h2>
           </p>
-          <br />
+          <br/>
           <span style="font-weight:bold;">Stage</span>
           <table class="stages">
             <tr t-foreach="o.type_ids" t-as="stage">
               <td>
-                <t t-esc="stage.name" />
+                <t t-esc="stage.name"/>
               </td>
               <td>
-                <t t-esc="stage.description" />
+                <t t-esc="stage.description"/>
               </td>
             </tr>
           </table>
@@ -309,5 +364,6 @@
     </t>
   </t>
 </t>
-</template>
+
+  </template>
 </odoo>
