--- a/hour_totals_sold/views/project_views.xml
+++ b/hour_totals_sold/views/project_views.xml
@@ -4,7 +4,7 @@
         <field name="name">Orders</field>
         <field name="res_model">sale.order</field>
         <field name="view_mode">tree,form</field>
-        <field name="domain">[('related_project_id', '=', default_related_project_id)]</field>
+        <field name="domain">[('analytic_account_id', '=', default_analytic_account_id)]</field>
     </record>
 
 
@@ -21,7 +21,7 @@
 				<button class="oe_stat_button" type="action"
 				name="%(act_project_project_2_project_order_all)d"
 				icon="fa-usd"
-				context="{'default_related_project_id': analytic_account_id}">
+				context="{'default_analytic_account_id': analytic_account_id}">
 					<field string="Orders" name="order_count" widget="statinfo"/>
                 </button>
 			</xpath>
